[gd_scene load_steps=6 format=3 uid="uid://djju80epexnwk"]

[ext_resource type="Script" path="res://audio_player.gd" id="1_05xtn"]
[ext_resource type="AudioStream" uid="uid://wxtfob38xyej" path="res://assets/sound/background_music.mp3" id="2_bmtd2"]
[ext_resource type="AudioStream" uid="uid://c2nodmklm2n4u" path="res://assets/sound/car_collision.wav" id="3_wwsmk"]
[ext_resource type="AudioStream" uid="uid://dprjmbr6vwcbu" path="res://assets/sound/car_horn.wav" id="4_r4utu"]
[ext_resource type="AudioStream" uid="uid://bahciu344cnqr" path="res://assets/sound/siren.mp3" id="5_mrf2y"]

[node name="AudioPlayer" type="Node"]
script = ExtResource("1_05xtn")

[node name="BackgroundSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_bmtd2")
autoplay = true

[node name="CrashSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_wwsmk")

[node name="HornSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_r4utu")

[node name="SirenSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_mrf2y")
